feat: Update pages controller and routes

--- a/src/views/dashboardPensamentos.handlebars
+++ b/src/views/dashboardPensamentos.handlebars
@@ -6,12 +6,12 @@
     <nav>
         <ul>
             <a><li>Pensamentos</li></a>
-            <a><li>{{user.name}}</li></a>
+            <a><li>{{user.email}}</li></a>
         </ul>
     </nav>
 </header>
 <main>
-
+    
 </main>
 <footer>
     <h2>Pensadores@2023</h2>
