--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -6,8 +6,8 @@
     <nav>
         <ul>
             <a><li>Pensamentos</li></a>
-            <a><li>Entrar</li></a>
-            <a><li>Registrar</li></a>
+            <a href="/login"><li>Entrar</li></a>
+            <a href="/register"><li>Registrar</li></a>
         </ul>
     </nav>
 </header>
@@ -18,9 +18,9 @@
         </div>
         <form action="/user/login" method="post">
             <p>E-mail:</p>
-            <input name="email" placeholder="Digite seu e-mail">
+            <input name="email" type="email" placeholder="Digite seu e-mail">
             <p id="senha_p">Senha:</p>
-            <input name="password" placeholder="Digite sua senha">
+            <input name="password" type="password" placeholder="Digite sua senha">
             <input id="button_entrar" type="submit" placeholder="Entrar">
         </form>
         <p>Não tem conta? <a href="/homePage">Clique aqui!</a></p>
