feat:  Update pages.controller.js, user.controller.js, home.handlebars, and login.handlebars

--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -5,16 +5,14 @@
 
     <nav>
         <ul>
-            <a><li>Pensamentos</li></a>
+            <a href="/"><li>Pensamentos</li></a>
             <a href="/login"><li>Entrar</li></a>
             <a href="/register"><li>Registrar</li></a>
         </ul>
     </nav>
 </header>
 <main>
-    {{#each thought}}
-        <h2>{{this.name}}</h2>
-    {{/each}}
+    <h2>Você está na home</h2>
 </main>
 <footer>
     <h2>Pensadores@2023</h2>
