--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -5,7 +5,7 @@
 
     <nav>
         <ul>
-            <a><li>Pensamentos</li></a>
+            <a href="/"><li>Pensamentos</li></a>
             <a href="/login"><li>Entrar</li></a>
             <a href="/register"><li>Registrar</li></a>
         </ul>
