--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -11,14 +11,14 @@
         </ul>
     </nav>
 </header>
-<main>
-    <h2>Conheça alguns de nossos Pensamentos:</h2>
+<main id="pensamentos">
+    <h2 id="title_pensamentos">Conheça alguns de nossos <span>Pensamentos:</span></h2>
     <div>
-        <div>
+        <div id="search">
             <input type="text" placeholder="Está buscando por algo?">
             <button>Buscar</button>
         </div>
-        <div>
+        <div id="order">
             <h2>Ordernar por: </h2>
             <input type="buton" value="Mais novos">
             <input type="buton" value="Mais antigos">
