--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,11 +1,11 @@
 <header>
-    <a href="">
+    <a href="/">
         <img src="/assets/logo.png" alt="">
     </a>
 
     <nav>
         <ul>
-            <a href="/"><li>Pensamentos</li></a>
+            <a href="/pensamentos"><li>Pensamentos</li></a>
             <a href="/login"><li>Entrar</li></a>
             <a href="/register"><li>Registrar</li></a>
         </ul>
