--- a/src/views/thought.handlebars
+++ b/src/views/thought.handlebars
@@ -1,11 +1,11 @@
 <header>
-    <a href="">
+    <a href="/">
         <img src="/assets/logo.png" alt="">
     </a>
 
     <nav>
         <ul>
-            <a href="/"><li>Pensamentos</li></a>
+            <a href="/pensamentos"><li>Pensamentos</li></a>
             <a href="/login"><li>Entrar</li></a>
             <a href="/register"><li>Registrar</li></a>
         </ul>
@@ -20,9 +20,9 @@
         </div>
         <div id="order">
             <h2>Ordernar por: </h2>
-            <input type="buton" value="Mais novos">
-            <input type="buton" value="Mais antigos">
-            <input type="button" value="limpar">
+            <input type="buton" value="Mais novos" id="news">
+            <input type="buton" value="Mais antigos" id="olders">
+            <input type="button" value="limpar" id="clean">
         </div>
     </div>
     {{#each thought}}
