feat: Added create thought page and styles.

--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -13,7 +13,7 @@
 </header>
 <main id="dashboard_main">
     <div id="create_thought">
-         <div id="dashboard">
+         <div class="title_page">
             <h2>Dashboard</h2>
         </div>
         <a href="/create">Criar Pensamento</a>
