--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -247,7 +247,7 @@ main {
   display: flex;
   justify-content: space-between;
 }
-#dashboard {
+.title_page {
   border-left: 6px solid #068fff;
   color: #fff;
   font-family: Inter;
@@ -259,7 +259,7 @@ main {
   display: flex;
   align-items: center;
 }
-#dashboard h2 {
+.title_page h2 {
   color: #fff;
   font-family: Inter;
   font-size: 30px;
@@ -297,6 +297,47 @@ main {
   line-height: normal;
 
   margin-top: 20px;
+}
+#main_create_thought {
+  align-self: flex-start;
+  align-items: flex-start;
+  display: flex;
+  justify-content: flex-start;
+  padding: 35px 0px 0px 125px;
+}
+#main_create_thought form {
+  width: 100%;
+}
+#main_create_thought form p {
+  color: #fff;
+  font-family: Inter;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+
+  margin-top: 60px;
+}
+#main_create_thought form #title_thought {
+  width: 100%;
+  height: 45px;
+  background-color: #1c1b1b;
+  border: 2px solid #fff;
+}
+#main_create_thought form #create_btn {
+  width: 206px;
+  height: 44px;
+  background-color: #1c1b1b;
+  border: 2px solid #068fff;
+
+  color: #068fff;
+  font-family: Inter;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+
+  margin-top: 15px;
 }
 footer {
   display: flex;
