--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -5,7 +5,7 @@
 
     <nav>
         <ul>
-            <a href="/pensamentos"><li>Pensamentos</li></a>
+            <a href="/thought/pensamentos"><li>Pensamentos</li></a>
             <a href="/login"><li>Entrar</li></a>
             <a href="/register"><li>Registrar</li></a>
         </ul>
