--- a/src/views/cadastrar.handlebars
+++ b/src/views/cadastrar.handlebars
@@ -11,6 +11,22 @@
     </ul>
   </nav>
 </header>
+<main id="main_register_user">
+  <div id="title_page">
+    <h2>Registrar</h2>
+  </div>
+  <form action="/user/create" method="post">
+    <p>Nome:</p>
+    <input type="text" name="name" placeholder="Digite seu nome">
+    <p>E-mail:</p>
+    <input type="email" name="email" placeholder="Digite seu e-mail">
+    <p>Senha:</p>
+    <input type="password" name="password" placeholder="Digite sua senha">
+    <p>Confirmação de Senha:</p>
+    <input type="password" placeholder="confirme sua senha">
+    <input type="submit" id="create_btn" value="Cadastrar">
+  </form>
+</main>
 <footer>
   <h2>Pensadores@2023</h2>
 </footer>
