Update CSS for register page

--- a/src/views/cadastrar.handlebars
+++ b/src/views/cadastrar.handlebars
@@ -12,7 +12,7 @@
   </nav>
 </header>
 <main id="main_register_user">
-  <div id="title_page">
+  <div class="title_page">
     <h2>Registrar</h2>
   </div>
   <form action="/user/create" method="post">
@@ -23,8 +23,8 @@
     <p>Senha:</p>
     <input type="password" name="password" placeholder="Digite sua senha">
     <p>Confirmação de Senha:</p>
-    <input type="password" placeholder="confirme sua senha">
-    <input type="submit" id="create_btn" value="Cadastrar">
+    <input type="password" placeholder="Confirme sua senha">
+    <input type="submit" id="create_user_btn" value="Cadastrar" style="margin-top: 20px;">
   </form>
 </main>
 <footer>
