--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -86,7 +86,7 @@ main {
   padding-left: 15px;
   margin-top: 5px;
 
-  color: #888;
+  color: #fff;
   font-family: Inter;
   font-size: 16px;
   font-style: normal;
@@ -339,6 +339,64 @@ main {
 
   margin-top: 15px;
 }
+#main_register_user {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+#main_register_user form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+#main_register_user form p {
+  color: #fff;
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+
+  margin: 15px 0px 5px 0px;
+}
+#main_register_user form input {
+  width: 468px;
+  height: 44px;
+  border: 2px solid #fff;
+
+  background-color: #1c1b1b;
+  padding-left: 15px;
+
+  color: #fff;
+}
+#main_register_user form input::placeholder {
+  color: #888;
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+#main_register_user form #create_user_btn {
+  width: 154px;
+  height: 44px;
+  border: 2px solid #068fff;
+  background-color: #1c1b1b;
+
+  color: #068fff;
+  font-family: Inter;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+
+  padding: 0;
+}
+
+#main_register_user #title_page{
+
+}
+
 footer {
   display: flex;
   align-items: center;
