--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -344,6 +344,8 @@ main {
 }
 #main_create_thought form {
   width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 #main_create_thought form p {
   color: #fff;
@@ -356,10 +358,18 @@ main {
   margin-top: 60px;
 }
 #main_create_thought form #title_thought {
-  width: 100%;
+  width: 400px;
   height: 45px;
   background-color: #1c1b1b;
   border: 2px solid #fff;
+  padding-left: 5px;
+
+  color: #fff;
+  font-family: Inter;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
 #main_create_thought form #create_btn {
   width: 206px;
